--- a/training_configs/mistral-7b-base-dpo.yaml
+++ b/training_configs/mistral-7b-base-dpo.yaml
@@ -1,20 +1,19 @@
 # Model arguments
-model_name_or_path: mistralai/Mistral-7B-Instruct-v0.1
+model_name_or_path: alignment-handbook/zephyr-7b-sft-full
 torch_dtype: null
 attn_implementation: flash_attention_2
 
 # Data training arguments
 dataset_mixer:
-  princeton-nlp/mistral-instruct-ultrafeedback: 1.0
+  HuggingFaceH4/ultrafeedback_binarized: 1.0
 dataset_splits:
-- train
-- test
+- train_prefs
+- test_prefs
 preprocessing_num_workers: 8
 
-# SimPOTrainer arguments
+# DPO arguments
 bf16: true
-beta: 2.5
-gamma_beta_ratio: 0.1
+beta: 2.0
 do_eval: true
 evaluation_strategy: steps
 eval_steps: 400
@@ -23,21 +22,21 @@ gradient_checkpointing: true
 gradient_checkpointing_kwargs:
   use_reentrant: False
 hub_model_id: simpo-exps
-learning_rate: 5.0e-7
+learning_rate: 3.0e-7
 log_level: info
 logging_steps: 5
 lr_scheduler_type: cosine
-max_length: 2048
-max_prompt_length: 1800
+max_length: 1024
+max_prompt_length: 512
 num_train_epochs: 1
 optim: adamw_torch
-output_dir: outputs/mistral-7b-instruct-simpo
-run_name: mistral-7b-instruct-simpo
+output_dir: outputs/mistral-7b-base-dpo
+run_name: mistral-7b-base-dpo
 per_device_train_batch_size: 2
 per_device_eval_batch_size: 4
 push_to_hub: false
 save_strategy: "steps"
-save_steps: 100
+save_steps: 50
 report_to:
 - wandb
 save_total_limit: 20000
@@ -45,4 +44,4 @@ seed: 42
 warmup_ratio: 0.1
 
 sample: 0.1
-task: simpo
+ranking_type: random # random, length, complexity
